# actixastrology

./: .gitignore  Cargo.toml  data_exemple.json  seed.sh  setup.sh
examples/: seed.rs
src/: main.rs
static/: form.html
