[package]
name = "actixastrology"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
astrology = "0.1.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.102"
base64 = "0.11.0"
