[package]
name = "actixastrology"
version = "0.1.0"
authors = ["stephaneworkspace <stephane@astrologie-traditionnelle.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2"
actix-web = "2.0"
actix-rt = "1.0"
astrology = "0.2.3"
libswe-sys = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.102"
city_time_zone_sqlite = { git = "https://github.com/stephaneworkspace/city_time_zone_sqlite/" }
num-traits = "0.2"
num-derive = "0.2"
